--- a/MCP/mcp-config-mvp.json
+++ b/MCP/mcp-config-mvp.json
@@ -1,34 +1,13 @@
 {
   "mcpServers": {
     "dev-tools": {
-      "autoApprove": [
-        "get_component_details",
-        "get_component_examples",
-        "list_shadcn_components",
-        "search_components",
-        "brave_web_search",
-        "brave_video_search",
-        "brave_news_search",
-        "brave_local_search",
-        "brave_image_search",
-        "fetch",
-        "brave_search",
-        "think",
-        "fetch_url",
-        "get_latest_bedrock_model",
-        "internet_search",
-        "memory",
-        "search_packages",
-        "get_library_docs",
-        "resolve_library_id",
-        "murican_to_english"
-      ],
       "disabled": false,
       "timeout": 600,
       "type": "stdio",
       "command": "/Users/samm/go/bin/mcp-devtools",
       "env": {
-        "DISABLED_FUNCTIONS": "brave_local_search,brave_video_search",
+        "DISABLED_FUNCTIONS": "",
+        "ENABLE_EXTRA_FUNCTIONS": "security",
         "BRAVE_API_KEY": "redacted"
       }
     }
