--- a/OpenCode/opencode.jsonc
+++ b/OpenCode/opencode.jsonc
@@ -3,48 +3,83 @@
   "plugin": [
     "@tarquinen/opencode-dcp@latest"
   ],
-  "autoupdate": true,
   "provider": {
     "llama_cpp": {
       "npm": "@ai-sdk/openai-compatible",
       "name": "llamaswap",
       "models": {
-        "qwen3-coder-next-udiq4nl-128k": {
-          "name": "qwen3-coder-next-udiq4nl-128k",
+        "qwen3-5-27b-ud-q4kxl-192k-coding-instruct": {
+          "name": "qwen3-5-27b-ud-q4kxl-192k-coding-instruct",
           "limit": {
-            "context": 128000,
+            "context": 196608,
             "output": 65536
           }
         },
-        "qwen3-5-35b-a3b-ud-q6kxl-128k-coding-thinking": {
-          "name": "qwen3-5-35b-a3b-ud-q6kxl-128k-coding-thinking",
+        "qwen3-5-27b-ud-q4kxl-192k-coding-thinking": {
+          "name": "qwen3-5-27b-ud-q4kxl-192k-coding-thinking",
           "limit": {
-            "context": 128000,
-            "output": 65536
-          }
-        },
-        "qwen3-5-35b-a3b-ud-q6kxl-128k-coding-instruct": {
-          "name": "qwen3-5-35b-a3b-ud-q6kxl-128k-coding-instruct",
-          "limit": {
-            "context": 128000,
+            "context": 196608,
             "output": 65536
           }
         },
         "qwen3-5-27b-ud-q6kxl-128k-coding-instruct": {
           "name": "qwen3-5-27b-ud-q6kxl-128k-coding-instruct",
           "limit": {
-            "context": 128000,
+            "context": 131072,
             "output": 65536
           }
         },
         "qwen3-5-27b-ud-q6kxl-128k-coding-thinking": {
           "name": "qwen3-5-27b-ud-q6kxl-128k-coding-thinking",
           "limit": {
-            "context": 128000,
+            "context": 131072,
+            "output": 65536
+          }
+        },
+        "qwen3-5-27b-ud-q6kxl-192k-coding-instruct": {
+          "name": "qwen3-5-27b-ud-q6kxl-192k-coding-instruct",
+          "limit": {
+            "context": 196608,
+            "output": 65536
+          }
+        },
+        "qwen3-5-27b-ud-q6kxl-192k-coding-thinking": {
+          "name": "qwen3-5-27b-ud-q6kxl-192k-coding-thinking",
+          "limit": {
+            "context": 196608,
+            "output": 65536
+          }
+        },
+        "qwen3-5-35b-a3b-ud-q5kxl-192k-coding-instruct": {
+          "name": "qwen3-5-35b-a3b-ud-q5kxl-192k-coding-instruct",
+          "limit": {
+            "context": 196608,
+            "output": 65536
+          }
+        },
+        "qwen3-5-35b-a3b-ud-q5kxl-192k-coding-thinking": {
+          "name": "qwen3-5-35b-a3b-ud-q5kxl-192k-coding-thinking",
+          "limit": {
+            "context": 196608,
+            "output": 65536
+          }
+        },
+        "qwen3-5-35b-a3b-ud-q6kxl-192k-coding-instruct": {
+          "name": "qwen3-5-35b-a3b-ud-q6kxl-192k-coding-instruct",
+          "limit": {
+            "context": 196608,
+            "output": 65536
+          }
+        },
+        "qwen3-5-35b-a3b-ud-q6kxl-192k-coding-thinking": {
+          "name": "qwen3-5-35b-a3b-ud-q6kxl-192k-coding-thinking",
+          "limit": {
+            "context": 196608,
             "output": 65536
           }
         }
       }
     }
-  }
+  },
+  "autoupdate": true
 }
